k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${ parameters.canonicalName }"
  namespace: "${ parameters.namespace }"
  labels:
    team: "${ parameters.team }"
    tags.datadoghq.com/env: "${ parameters.namespace }"
    tags.datadoghq.com/service: "${ parameters.canonicalName }"
    tags.datadoghq.com/version: "${trigger.artifacts.$[type == 'docker/image'].version}"
spec:
  replicas: "${ #toInt( parameters.minReplicas ) }"
  revisionHistoryLimit: 2
  progressDeadlineSeconds: "${ #toInt( parameters.deploymentProgressDeadlineSeconds ) }"
  selector:
    matchLabels:
      app: "${ parameters.canonicalName }"
  template:
    metadata:
      annotations:
        "ad.datadoghq.com/${ parameters.canonicalName }.logs": '[{ "service":"${ parameters.canonicalName }", "source":"${ parameters.canonicalName }", "team":"${ parameters.team }", "canonicalName":"${ parameters.canonicalName }" }]'
        "ad.datadoghq.com/${ parameters.canonicalName }.tags": '{ "team":"${ parameters.team }", "canonicalName":"${ parameters.canonicalName }" }'
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: "${ parameters.canonicalName }"
        version: latest
        team: "${ parameters.team }"
        tags.datadoghq.com/env: "${ parameters.namespace }"
        tags.datadoghq.com/service: "${ parameters.canonicalName }"
        tags.datadoghq.com/version: "${trigger.artifacts.$[type == 'docker/image'].version}"
    spec:
      imagePullSecrets:
        - name: tcxregsecret
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: "${ parameters.canonicalName }"
          image: tcxcontainers.azurecr.io/tcx/entitlementsnavbarpermissions
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              cpu: 500m
          ports:
            - containerPort: 80
              name: http
### Health checks: section start (remove the leading hash on each line and retain all spaces to ensure proper YAML alignment)
#          readinessProbe:
#            httpGet:
#              path: /status/ready # endpoint for readiness check; must return a 200 while pod is ready
#              port: 80
#              scheme: HTTP
#            initialDelaySeconds: 2 # number of seconds to wait after the pod comes up before it starts testing
#            periodSeconds: 10 # interval in seconds between tests
#            timeoutSeconds: 2 # number of seconds before a test will implicitly fail, if no success was returned in that time
#            successThreshold: 1 # has to pass a test this number of times contiguously before it can transition to a success
#            failureThreshold: 3 # has to fail a test this number of times contiguously before it can transition to a failure
#          livenessProbe:
#            httpGet:
#              path: /status/live # endpoint for liveness check; must return a 200 while pod is live
#              port: 80
#              scheme: HTTP
#            initialDelaySeconds: 2 # number of seconds to wait after the pod comes up before it starts testing
#            periodSeconds: 10 # interval in seconds between tests
#            timeoutSeconds: 2 # number of seconds before a test will implicitly fail, if no success was returned in that time
#            successThreshold: 1 # has to pass a test this number of times contiguously before it can transition to a success
#            failureThreshold: 6 # has to fail a test this number of times contiguously before it can transition to a failure
### Health checks: section end
## Keyvault mappings: section start (remove the leading hash on each line and retain all spaces to ensure proper YAML alignment)
          volumeMounts:
            - name: azure-vault-projection
              mountPath: "/kvmnt"
              readOnly: true
      volumes:
        - name: azure-vault-projection
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "${ parameters.canonicalName }"
            nodePublishSecretRef:
              name: kvcreds
      imagePullSecrets:
        - name: tcxregsecret
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: "${ parameters.canonicalName }"
  labels:
    app: "${ parameters.canonicalName }"
    team: "${ parameters.team }"
  namespace: "${ parameters.namespace }"
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: "${ parameters.canonicalName }"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "${ parameters.canonicalName }"
  namespace: "${ parameters.namespace }"
  labels:
    team: "${ parameters.team }"
spec:
  host: "${ parameters.canonicalName }"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v2
      labels:
        version: latest
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "${ parameters.canonicalName }"
  namespace: "${ parameters.namespace }"
  labels:
    team: "${ parameters.team }"
spec:
  hosts:
  - "${ parameters.apiGatewayHost }"
  gateways:
  - istio-system/api-cloud-gateway
  http:
  - match:
    - uri:
        prefix: "/${ parameters.canonicalName }/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: "${ parameters.canonicalName }"
        subset: v2
      weight: 100
---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: "${ parameters.canonicalName }"
#  namespace: "${ parameters.namespace }"
#  labels:
#    team: "${ parameters.team }"
#spec:
#  gateways:
#    - "tcx-ingress"
#  hosts:
#    - "${ parameters.hosts }"
#  http:
#    - route:
#        - destination:
#            host: "${ parameters.canonicalName }"
#            subset: v2
#          weight: 100
#---
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: "${ parameters.docsVirtualServiceName }"
#  namespace: "${ parameters.namespace }"
#  labels:
#    team: "${ parameters.team }"
#spec:
#  gateways:
#    - tcx-ingress
#  hosts:
#    - "${ parameters.docsHost }"
#  http:
#    - match:
#        - uri:
#            prefix: /core/v1/${ parameters.canonicalName }
#      rewrite:
#        uri: /v3/api-docs
#      route:
#        - destination:
#            host: "${ parameters.canonicalName }"
#            subset: v2
#          weight: 100
#          headers:
#            response:
#              add:
#                Access-Control-Allow-Origin: "*"
## this adds the header "access-control-allow-credentials" with value "true" to the api-docs responses. This header is required for integration with Dev Network Documentation
#                Access-Control-Allow-Credentials: "true"
